--- a/booking.html
+++ b/booking.html
@@ -99,7 +99,7 @@
                             <span></span>
                         <span></span>
                         <span></span>
-                        <span></span>submit</button>
+                        <span></span>Book</button>
                       
                     </form>
                   </div>
