--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h1 style="text-align: center;">Welcome to MARC Gaming Lab</h1>
                 <p style="text-align: center;">Unleash Your Gaming Experience at MARC GameLab</p>
                 <div class="button-wrapper">
-                  <button class="cta-button">Book Now</button>
+                  <a href="booking.html" style="text-decoration: none; color: inherit;"><button class="cta-button">Book Now</button></a>
                 </div>
                 
             </div>
@@ -74,7 +74,7 @@
         <li>Playstation 2</li>
         
       </ul>
-      <button class="cta-button-tab">Book Now</button>
+      <a href="booking.html" style="text-decoration: none; color: inherit;"><button class="cta-button-tab">Book Now</button></a>
       <!-- <p class="comparison">Perfect for side projects</p> -->
     </div>
 
