--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
         <h2 class="myH2" style="margin-bottom: 5vh; margin-top: 10vh;font-size: 2.5rem;">Our Services
         </h2>
           <div class="responsive-container">
-            <img src="https://via.placeholder.com/150" alt="Example Image" class="responsive-image">
+            <img src="images/about1.jpg" alt="Example Image" class="responsive-image">
             <div class="responsive-text">
               <h2>Our Story</h2>
               <p>
@@ -125,10 +125,10 @@
                 
               </p>
             </div>
-            <img src="https://via.placeholder.com/150" alt="Example Image" class="responsive-image">
+            <img src="images/about2.jpg" alt="Example Image" class="responsive-image">
           </div>
           <div class="responsive-container">
-            <img src="https://via.placeholder.com/150" alt="Example Image" class="responsive-image">
+            <img src="images/about3.jpg" alt="Example Image" class="responsive-image">
             <div class="responsive-text">
               <h2>Location & Timings</h2>
               <p>
@@ -155,10 +155,10 @@
                   </ul></div>
               </p>
             </div>
-            <img src="https://via.placeholder.com/150" alt="Example Image" class="responsive-image">
+            <img src="images/about4.jpg" alt="Example Image" class="responsive-image">
           </div>
           <div class="responsive-container">
-            <img src="https://via.placeholder.com/150" alt="Example Image" class="responsive-image">
+            <img src="images/about5.jpg" alt="Example Image" class="responsive-image">
             <div class="responsive-text">
               <h2>Who Can Enjoy MARC GameLab?</h2>
               <p>
@@ -183,7 +183,7 @@
                   </ul></div>
               </p>
             </div>
-            <img src="https://via.placeholder.com/150" alt="Example Image" class="responsive-image">
+            <img src="images/about6.jpg" alt="Example Image" class="responsive-image">
           </div>
           
 
