--- a/services.html
+++ b/services.html
@@ -297,7 +297,7 @@ td {
                   <h2 class="myH2" style="margin-bottom: 5vh; margin-top: 10vh;font-size: 2.5rem;">Our Services
                 </h2>
                   <div class="responsive-container">
-                    <img src="https://via.placeholder.com/150" alt="Example Image" class="responsive-image">
+                    <img src="images/pizza.jpg" alt="Example Image" class="responsive-image">
                     <div class="responsive-text">
                       <h2>Food Options</h2>
                       <p>
@@ -318,7 +318,7 @@ td {
                     </div>
                   </div>
                   <div class="responsive-container">
-                    <img src="https://via.placeholder.com/150" alt="Example Image" class="responsive-image">
+                    <img src="images/about5.jpg" alt="Example Image" class="responsive-image">
                     <div class="responsive-text">
                       <h2>Ambiance</h2>
                       <p>
@@ -339,7 +339,7 @@ td {
                     </div>
                   </div>
                   <div class="responsive-container">
-                    <img src="https://via.placeholder.com/150" alt="Example Image" class="responsive-image">
+                    <img src="images/ps.jpg" alt="Example Image" class="responsive-image">
                     <div class="responsive-text">
                       <h2>Tournaments</h2>
                       <p>
@@ -353,7 +353,7 @@ Showcase your skills and win prizes by joining our tournaments:
                     </div>
                   </div>
                   <div class="responsive-container">
-                    <img src="https://via.placeholder.com/150" alt="Example Image" class="responsive-image">
+                    <img src="images/sports.jpg" alt="Example Image" class="responsive-image">
                     <div class="responsive-text">
                       <h2>Live Sports Screening</h2>
                       <p>
@@ -363,7 +363,7 @@ Watch your favorite sports with friends while enjoying the gaming experience.
                     </div>
                   </div>
                   <div class="responsive-container">
-                    <img src="https://via.placeholder.com/150" alt="Example Image" class="responsive-image">
+                    <img src="images/about2.jpg" alt="Example Image" class="responsive-image">
                     <div class="responsive-text">
                       <h2>Why Choose Us?</h2>
                       <p>
