updated as required

--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@
       
       /* Text container styling */
       .responsive-text {
+        color: #ffffff;
           font-size: 1.5rem;
         flex: 1; /* Allow text to grow and take up remaining space */
         text-align: center; /* Center text horizontally */
