font size update

--- a/booking.html
+++ b/booking.html
@@ -94,7 +94,7 @@
                       </div>
                       <div class="">
                         <input type="checkbox" name="advance_payment" required>
-                        <label style="color: #ffffff;">Please pay ₹100 in advance to GPay and send the screenshot to WhatsApp to confirm your booking.</label>
+                        <label style="color: #ffffff; font-size: 2rem; padding-left: 5vw;">  Please pay ₹100 in advance to GPay and send the screenshot to WhatsApp to confirm your booking.</label>
                       </div>
                       <label></label>
                         <button type="submit" class="custom-button">
@@ -108,7 +108,7 @@
         </div>
         <div style="height: auto">
             <!-- just to make scrolling effect possible -->
-                <h2 class="myH2" style="margin-bottom: 5vh; margin-top: 10vh;">About MARC GameLab</h2>
+                <!-- <h2 class="myH2" style="margin-bottom: 5vh; margin-top: 10vh;">About MARC GameLab</h2> -->
                 <div class="pricing-container">
                     <!-- Basic Plan -->
                     
